# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG    = fixed a bug that was (or could have been) crashing
#
#
[SVN 1820] Jan 11, 2009
    The Pygame documents and examples are now part of the Pygame package,
    directories docs and examples respectively.

[SVN 1812:1814] Jan 09, 2009
    Pygame unit test suite is now the pygame.tests package. For Pygame
    development the unit tests still run from test in the installation
    directory without conficts.

Dec 05, 2008
    exposed mask C API from Michael George.  Thanks!


Aug 30, 2008
    [BUG] Fixed CREATE_PIXEL macro's use of Aloss
    which was making surface.fill with surfaces with no alpha go green 

Jul 18, 2008
    Added Surface.set_masks and .set_shifts useful for using data in
        b,g,r,a mode... and other fun hacks.

Jul 14, 2008
    [BUG] Fixed bug with transform.threshold() not honoring third surface
    Updated transform.threshold() docs Thanks Nirav Patel

Jul 10, 2008
    Added patch for filelikes in mixer.music.load thanks Forrest Voight!

Jul 8, 2008
    run_tests.py improved with --help and running stuff in subprocesses.

Jun 25, 2008
    Added many extra empty test stubs for untested things.  Thanks Nicholas!
    Test runner that works with subprocess and threads to isolate tests.
        So that if a crash happens in one test the other tests still run.
        Thanks Nicholas!

    [BUG] Added a fix for rotate on multiples of 90.0000001-90.99999 degrees.
        Thanks Charlie Nolan, and Marcus!

Jun 21, 2008
    Added BLEND_RGBA_* special flags for blit, and fill.

Jun 16, 2008
    Reworked locking code. Locks are now more strict and can only be
    removed by the object(s), that caused them.
    New Surface.get_locks() method, which returns the currently existing
    locks.
    [BUG] Fixed Surface.get_locked() bug for Surfaces which do not
      require locking, but have third-party locks attached.